Role Methode richtig konfiguriert